@startuml
' --- CONFIGURACIÓN VISUAL ---

skinparam linetype ortho
skinparam nodesep 70
skinparam ranksep 100
skinparam padding 5

' --- ENTIDADES ---
package "ABP-Musica" {

  package "backend" {
    package "enums" {
      enum product_type_enum {
        album
        vinyl
        clothing
        tote_bag
        pin
      }

      enum event_type_enum {
        concert
        tour
        festival
        movie
        tv_series
      }

      enum order_status_enum {
        pending
        paid
        shipped
        delivered
        cancelled
      }

    }

    entity "artists" as artists {
      * artist_id : INT <<PK>>
      --
      * real_name : VARCHAR(150)
      * artist_name : VARCHAR(150)
      * birth_date : DATE
      * debut : DATE
      * country : VARCHAR(150)
      * social_media : TEXT
      * image : TEXT
      o description : TEXT
      * mb_id : UUID
      --
      + to_dict() : Dict
    }

    entity "albums" as albums {
      * album_id : INT <<PK>>
      --
      o artist_id : INT <<FK>>
      * album_title : VARCHAR(100)
      * release_date : DATE
      * total_track : INT
      * cover_album : TEXT
      * spotify : TEXT
      * mb_album_id : UUID
      --
      + to_dict() : Dict
    }

    entity "songs" as songs {
      * song_id : INT <<PK>>
      --
      o album_id : INT <<FK>>
      * song_title : VARCHAR(150)
      * duration : TIME
      o video_url : TEXT
      * cover_song : TEXT
      * mb_song_id : UUID
      --
      + to_dict() : Dict
    }

    entity "products" as products {
      * product_id : INT <<PK>>
      --
      o artist_id : INT <<FK>>
      * product_name : VARCHAR(250)
      * product_type : product_type_enum
      * price : DECIMAL(10,2)
      * stock : INT
      * image_url : TEXT
      --
      + to_dict() : Dict
    }

    entity "events" as events {
      * event_id : INT <<PK>>
      --
      o artist_id : INT <<FK>>
      * event_name : VARCHAR(250)
      * event_type : event_type_enum
      * event_date : DATE
      o location : VARCHAR(100)
      * poster : TEXT
      --
      + to_dict() : Dict
    }

    entity "carts" as carts {
      * cart_id : INT <<PK>>
      --
      o product_id : INT <<FK>>
      * quantity : INT
    }

    entity "orders" as orders {
      * order_id : INT <<PK>>
      --
      * order_date : DATE
      * total_price : DECIMAL(10,2)
      * status : order_status_enum
    }

    entity "order_items" as order_items {
      * order_item_id : INT <<PK>>
      --
      o order_id : INT <<FK>>
      o product_id : INT <<FK>>
      * quantity : INT
      * price : DECIMAL(10,2)
    }

    entity "users" as users {
      * user_id : INT <<PK>>
      --
      * username : VARCHAR(50)
      * password : VARCHAR(50)
      * is_admin : BOOLEAN
      * date : TIMESTAMP
      --
      + to_dict() : Dict
    }

    ' Relaciones de base de datos '
    artists ||--o{ albums
    artists ||--o{ products
    artists ||--o{ events
    albums ||--o{ songs
    orders ||--o{ order_items
    products ||--o{ order_items
    products ||--o{ carts
    }

    package "frontend (mainJS separado por módulos lógicos)" {

    class "GlobalState" as state << (M,#FFCA28) State >> {
      - currentArtistIndex : int
      - artistsData : Array
      - productsData : Array
      - eventsData : Array
      - ordersData : Array
      - orderItemsData : Array
      - cart : Array
    }

    class "APIFetcher" as api << (M,#FFCA28) Service >> {
      + fetchArtists()
      + fetchProducts()
      + fetchOrders()
      + fetchOrdersItems()
      + fetchEvents()
    }

    class "Shop & Cart" as shop << (M,#FFCA28) Controller >> {
      - activeCategory : String
      - activeArtist : String
      --
      + filterProducts(type)
      + filterByArtist(id)
      + applyFilters()
      + populateArtistFilter()
      + openCart()
      + closeCart()
      + addToCart(id)
      + renderCart()
      + removeFromCart(id)
      + emptyCart()
      + updateCartCounter()
      + goToOrders()
    }

    class "UI & Views" as ui << (M,#FFCA28) View >> {
      + showSection(id)
      + toggleMobileMenu()
      + renderArtistSlides()
      + renderEvents()
      + renderProducts(data)
      + renderFeaturedProducts()
      + renderOrders()
      + viewArtistCatalog(index)
      + closeCatalog()
      + nextArtist()
      + prevArtist()
      + updateSlide(index)
      + showPrviousOrders()
      + closeOrdersModal()
    }

    class "AuthManager" as auth << (M,#FFCA28) Controller >> {
      + showLogin()
      + hideLogin()
      + handleLogin(event)
      + handleLogout()
      + checkLoginStatus()
      + updateUIForLoggedInUser(user)
      + updateUIForLoggedOutUser()
    }

    ' Forzar distribución horizontal de los módulos del frontend '
    state -[hidden]right-> api
    api -[hidden]right-> shop
    shop -[hidden]right-> ui
    ui -[hidden]right-> auth
  }

  ' Dependencias entre los submódulos del Frontend y el Backend '
  api ..> artists : Consulta API (/api/artists/)
  api ..> products : Consulta API (/api/shop/)
  api ..> events : Consulta API (/api/events/)
  api ..> orders : Consulta API (/api/orders/)
  auth ..> users : Autenticación (/api/auth/)

}
@enduml